# burpr

./: .gitignore  CHANGELOG.md  LICENSE.txt  README.md  __init__.py  burpr.py  pyproject.toml  requirements.txt  setup.py  test_bytes_support.py  test_latin1_fuzzing.py
burpr/: __init__.py  burpr.py
burpr/enums/: ProtocolEnum.py
burpr/models/: BurpRequest.py
enums/: TransportEnum.py
models/: BurpRequest.py
tests/: test_burpr.py
