[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "burpr"
version = "0.3.0"
authors = [
    {name = "Krystian Bajno", email = "krystian.bajno@gmail.com"},
]
description = "A Burp Suite request parser, used for aid in assessing application security functionality."
readme = "README.md"
license = "MIT"
keywords = ["burp", "suite", "burpsuite", "request", "parser", "security", "testing", "http", "http2"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.7"
dependencies = [
    "requests>=2.25.0",
    "httpx[http2]>=0.23.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
]

[project.urls]
Homepage = "https://github.com/krystianbajno/burpr"
Repository = "https://github.com/krystianbajno/burpr"

[tool.setuptools.packages.find]
include = ["burpr*", "tests*"]